finish form validators

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,23 +1,26 @@
+@import url('https://fonts.googleapis.com/css?family=Poppins:400,500,600,700&display=swap');
+:root {
+  --primary: #ff7a7a;
+  --secondary: #38cc8c;
+  --accent: #6055a5;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: var(--primary);
+  background-image: url('../images/bg-intro-mobile.png');
+  background-position: center;
+  background-repeat: repeat-y;
+  background-size: cover;
+  color: white;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-
-.attribution {
-  font-size: 11px;
-  text-align: center;
-}
-.attribution a {
-  color: hsl(228, 45%, 44%);
 }
 
 .container {
@@ -163,6 +166,114 @@ code {
   .offset-by-one-half.columns {
     margin-left: 52%;
   }
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+.attribution a {
+  color: var(--accent);
+}
+
+h3 {
+  font-size: 2rem;
+  font-weight: 700;
+}
+
+p {
+  font-size: 0.8rem;
+  font-weight: 600;
+  line-height: 1.8;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.mt-1 {
+  margin-top: 1rem !important;
+}
+.mt-2 {
+  margin-top: 2rem !important;
+}
+.mt-3 {
+  margin-top: 3rem !important;
+}
+.mt-4 {
+  margin-top: 4rem !important;
+}
+.mt-5 {
+  margin-top: 5rem !important;
+}
+
+.blue-card {
+  width: 85%;
+  margin: 0 auto;
+  background: var(--accent);
+  padding: 8px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+}
+
+.blue-card p {
+  font-weight: 400;
+}
+
+.white-card {
+  width: 85%;
+  margin: 0 auto;
+  background: white;
+  padding: 8px;
+  border-radius: 10px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+}
+
+div .text-card {
+  margin: 0 auto;
+  width: 60%;
+}
+
+input {
+  height: 35px;
+  width: 90%;
+  margin-top: 10px;
+  border-radius: 5px;
+  border: 1px solid #e2e2e2;
+  padding-left: 10px;
+  color: black;
+  font-weight: 600;
+}
+
+h5 {
+  margin: 2px 0 0 0;
+  color: var(--primary);
+}
+
+button.submit {
+  height: 35px;
+  font-weight: 700;
+  width: 90%;
+  margin-top: 10px;
+  border-radius: 5px;
+  background: var(--secondary);
+  color: white;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
+}
+
+button.submit:hover {
+  cursor: pointer;
+  color: var(--secondary);
+  background: white;
+  border: 1px solid var(--secondary);
+}
+
+.term-text {
+  color: rgb(201, 201, 201);
+}
+
+.term-text strong {
+  color: var(--primary);
 }
 
 @media (min-width: 400px) {
