--- a/src/css/index.css
+++ b/src/css/index.css
@@ -26,7 +26,7 @@ code {
 .container {
   position: relative;
   width: 100%;
-  max-width: 960px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 0 20px;
   box-sizing: border-box;
@@ -45,7 +45,7 @@ code {
   }
 }
 
-@media (min-width: 550px) {
+@media (min-width: 768px) {
   .container {
     width: 80%;
   }
@@ -276,17 +276,23 @@ button.submit:hover {
   color: var(--primary);
 }
 
-@media (min-width: 400px) {
-}
+@media (min-width: 768px) {
+  body {
+    background-image: url('../images/bg-intro-desktop.png');
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100vh;
+  }
+  .row-container {
+    min-height: 90vh;
+    display: flex;
+    align-items: center;
+  }
 
-@media (min-width: 550px) {
-}
-
-@media (min-width: 750px) {
-}
-
-@media (min-width: 1000px) {
-}
-
-@media (min-width: 1200px) {
+  h3 {
+    font-size: 4rem;
+  }
+  .d-flex-desktop p {
+    text-align: left;
+  }
 }
